<resources>
    <string name="app_name">MediAnt</string>
    <string name="logo">Logo</string>
    <string name="placeholder">Placeholder</string>
    <string name="connect_to_ipfs">Connecting to IPFS…</string>
    <string name="create_wallet">Creating Textile wallet…</string>
    <string name="camera">Camera</string>
    <string name="dismiss">Dismiss</string>

    <string name="feeds">Feeds</string>
    <string name="storage">Storage</string>
    <string name="proof_generating_message">Generating proof and signatures…</string>
    <string name="proof_generated_message">Successfully generated proof and signatures</string>
    <string name="media_uploaded_message">Successfully uploaded media via Textile</string>

    <string name="create_thread">Create Thread</string>
    <string name="thread_name">Thread Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="info">Information</string>
    <string name="leave">Leave</string>
    <string name="publish">Publish</string>
    <string name="deletion_confirmation_title">Delete?</string>
    <string name="deletion_confirmation_positive">Just do it</string>
    <string name="deletion_confirmation_negative">No</string>

    <string name="details">Details</string>
    <string name="source_user">Source User</string>
    <string name="block_timestamp">Block Timestamp</string>
    <string name="proof">Proof</string>
    <string name="proof_signature">Proof Signature</string>
    <string name="media_signature">Media Signature</string>
    <string name="block_hash">Block Hash</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="textile">Textile</string>
    <string name="general_settings">General Settings</string>
    <string name="textile_settings">Textile Settings</string>
    <string name="general_settings_summary">"General preferences"</string>
    <string name="textile_settings_summary">Settings for Textile API</string>
    <string name="general_settings_icon_description">General preferences icon</string>
    <string name="textile_settings_icon_description">Textile settings icon</string>
    <string name="wallet_recovery_phrase">Wallet Recovery Phrase</string>
    <string name="personal_thread_id">Personal Thread ID</string>
    <string name="proofmode_pgp_password">ProofMode PGP Password</string>
    <string name="proofmode_pgp_public_key">ProofMode PGP Public Key</string>
    <string name="sign_with_zion">Sign with Zion</string>

    <string name="permission_rationale_label">Permission Denied</string>
    <string name="proofmode_permissions_rationale">MediAnt requires permissions to save the proof (including GPS info) and signature of the pictures you take into device\'s storage. Go to settings to turn on the permissions of this APP.</string>
</resources>
