<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/initializationFragment">
    <fragment
        android:id="@+id/initializationFragment"
        android:name="io.numbers.mediant.ui.initialization.InitializationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_initialization">
        <action
            android:id="@+id/action_initializationFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/initializationFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="io.numbers.mediant.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_threadFragment"
            app:destination="@id/threadFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="io.numbers.mediant.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_textileSettingsFragment"
            app:destination="@id/textileSettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_sharedPreferencesFragment"
            app:destination="@id/sharedPreferencesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/textileSettingsFragment"
        android:name="io.numbers.mediant.ui.settings.textile.TextileSettingsFragment"
        android:label="@string/textile_settings"
        tools:layout="@layout/fragment_textile_settings" />
    <fragment
        android:id="@+id/sharedPreferencesFragment"
        android:name="io.numbers.mediant.ui.settings.preferences.SharedPreferencesFragment"
        android:label="@string/general_settings" />
    <fragment
        android:id="@+id/threadFragment"
        android:name="io.numbers.mediant.ui.main.thread.ThreadFragment"
        android:label="{threadName}"
        tools:layout="@layout/fragment_thread">
        <argument
            android:name="threadId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="threadName"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>